# ocular

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  ocular.example.toml  ocular.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/ocular/: Cargo.toml
crates/ocular-capture/: Cargo.toml
crates/ocular-capture/src/: lib.rs  stream.rs
crates/ocular-capture/tests/: integration.rs
crates/ocular-protocol/: Cargo.toml
crates/ocular-protocol/src/: amqp.rs  handler.rs  handlers.rs  http.rs  kafka.rs  lib.rs  memcached.rs  mongodb.rs  mysql.rs  postgres.rs  resp.rs
crates/ocular-proxy/: Cargo.toml
crates/ocular-proxy/src/: lib.rs
crates/ocular-tui/: Cargo.toml
crates/ocular-tui/src/: lib.rs  theme.rs
crates/ocular/src/: cli.rs  demo.rs  main.rs  wizard.rs
docs/: usage-scenarios.md
scripts/: bump-version.sh
testing/: docker-compose.yml  elasticsearch_crud.sh  https_crud.sh  kafka_crud.sh  memcached_crud.sh  mongodb_crud.sh  mysql_crud.sh  nginx-https.conf  postgres_crud.sh  rabbitmq_crud.sh  redis_crud.sh  run.sh  test-capture.sh
