[package]
name = "ocular-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol parsers for ocular (Redis, MySQL, PostgreSQL, MongoDB, AMQP, HTTP)"

[dependencies]
anyhow.workspace = true
flate2.workspace = true
snap.workspace = true
lz4_flex.workspace = true
zstd.workspace = true
