[package]
name = "ocular-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async TCP proxy with protocol-aware event broadcasting for ocular"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
ocular-protocol = { path = "../ocular-protocol", version = "0.5.0" }
