[package]
name = "ocular-tui"
version.workspace = true
edition.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
regex.workspace = true
toml.workspace = true
chrono = "0.4"
fuzzy-matcher = "0.3"
sqlformat = "0.2"
ocular-proxy = { path = "../ocular-proxy" }
ocular-protocol = { path = "../ocular-protocol" }
