[package]
name = "ocular-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for ocular middleware traffic visualization"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
regex.workspace = true
toml.workspace = true
toml_edit = "0.22"
chrono = "0.4"
fuzzy-matcher = "0.3"
sqlformat = "0.2"
ocular-proxy = { path = "../ocular-proxy", version = "0.12.0" }
ocular-protocol = { path = "../ocular-protocol", version = "0.12.0" }
tui-input = "0.11"
