[package]
name = "ocular"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ocular"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs = "5"
ocular-proxy = { path = "../ocular-proxy" }
ocular-tui = { path = "../ocular-tui" }
ocular-protocol = { path = "../ocular-protocol" }
