[package]
name = "ocular-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TUI tool for real-time visualization of middleware traffic"
keywords = ["tui", "proxy", "redis", "mysql", "debugging"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "ocular"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs = "5"
chrono.workspace = true
crossterm.workspace = true
ocular-proxy = { path = "../ocular-proxy", version = "0.12.0" }
ocular-tui = { path = "../ocular-tui", version = "0.12.0" }
ocular-protocol = { path = "../ocular-protocol", version = "0.12.0" }
ocular-capture = { path = "../ocular-capture", version = "0.12.0", optional = true }

[features]
default = ["capture"]
capture = ["dep:ocular-capture"]
